// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match basic snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 5,
      "marginTop": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffd600",
        "fontSize": 41.0958904109589,
        "fontWeight": "bold",
        "width": "50%",
      }
    }
  >
    Test field
  </Text>
  <View
    style={
      Object {
        "width": "30%",
      }
    }
  >
    <View
      style={
        Object {
          "placeholderTextColor": "#ffffff",
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 6,
            },
            Object {
              "backgroundColor": "#303030",
              "borderColor": "#31adff",
              "borderRadius": 4,
              "borderWidth": 1,
            },
          ]
        }
        testID="text-input-outline"
      />
      <View>
        <View
          style={
            Array [
              Object {
                "paddingBottom": 0,
              },
              Object {
                "minHeight": 64,
                "paddingTop": 8,
              },
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Test field"
            placeholderTextColor="#ffffff"
            selectionColor="#ffd600"
            style={
              Array [
                Object {
                  "flexGrow": 1,
                  "margin": 0,
                  "paddingHorizontal": 14,
                  "zIndex": 1,
                },
                Object {
                  "height": 56,
                },
                Object {
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                Object {
                  "color": "#ffd600",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "textAlign": "left",
                  "textAlignVertical": "center",
                },
                false,
                Array [
                  Object {},
                ],
              ]
            }
            testID="text-input-outlined"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ff0000",
          "fontSize": 20.54794520547945,
        }
      }
    >
      test error
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#ababab",
        "fontSize": 30.821917808219176,
        "fontWeight": "bold",
        "marginLeft": 10,
      }
    }
  >
    players
  </Text>
</View>
`;

exports[`should match snapshot with non-user input 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 5,
      "marginTop": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffd600",
        "fontSize": 41.0958904109589,
        "fontWeight": "bold",
        "width": "50%",
      }
    }
  >
    Test field
  </Text>
  <View
    style={
      Object {
        "width": "30%",
      }
    }
  >
    <Text>
      Test display
    </Text>
    <Text
      style={
        Object {
          "color": "#ff0000",
          "fontSize": 20.54794520547945,
        }
      }
    >
      test error
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#ababab",
        "fontSize": 30.821917808219176,
        "fontWeight": "bold",
        "marginLeft": 10,
      }
    }
  >
    players
  </Text>
</View>
`;

exports[`should match snapshot without unit 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 5,
      "marginTop": 5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ffd600",
        "fontSize": 41.0958904109589,
        "fontWeight": "bold",
        "width": "50%",
      }
    }
  >
    Test field
  </Text>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "placeholderTextColor": "#ffffff",
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 6,
            },
            Object {
              "backgroundColor": "#303030",
              "borderColor": "#31adff",
              "borderRadius": 4,
              "borderWidth": 1,
            },
          ]
        }
        testID="text-input-outline"
      />
      <View>
        <View
          style={
            Array [
              Object {
                "paddingBottom": 0,
              },
              Object {
                "minHeight": 64,
                "paddingTop": 8,
              },
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Test field"
            placeholderTextColor="#ffffff"
            selectionColor="#ffd600"
            style={
              Array [
                Object {
                  "flexGrow": 1,
                  "margin": 0,
                  "paddingHorizontal": 14,
                  "zIndex": 1,
                },
                Object {
                  "height": 56,
                },
                Object {
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                Object {
                  "color": "#ffd600",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "textAlign": "left",
                  "textAlignVertical": "center",
                },
                false,
                Array [
                  Object {},
                ],
              ]
            }
            testID="text-input-outlined"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ff0000",
          "fontSize": 20.54794520547945,
        }
      }
    >
      test error
    </Text>
  </View>
</View>
`;
